--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,14 +1,21 @@
 <!DOCTYPE html>
-<html>
+<html lang ="en">
 <head>
-  <title>Ustaz</title>
+  <title>Dr. Abdullah Yasin - Video Ceramah</title>
   <%= stylesheet_link_tag    "application", :media => "all" %>
+  <script type="text/javascript" src="http://cdn.sublimevideo.net/js/aa8czafz.js"></script>
+
   <%= javascript_include_tag "application" %>
   <%= csrf_meta_tags %>
 </head>
 <body>
 
-<%= yield %>
+<%= render :partial => 'layouts/navigation' %>
+
+<section class="container">
+	<%= yield %>	
+</section>
+
 
 </body>
 </html>
