--- a/app/views/main/video1.html.erb
+++ b/app/views/main/video1.html.erb
@@ -1,9 +1,8 @@
-<div id="video">
-	<h1>Dua Kalimah Syahadat Kuliah 1</h1>
-	
-	<%= video_tag ["http://c324901.r1.stream.cf1.rackcdn.com/HDKS1.webm"], 
-		:size => "640x368",
-	 	:poster => "HDKS-1.jpg",
-		:preload => "none" 
-	%>
-</div>
+<h1>Dua Kalimah Syahadat Kuliah 1</h1>
+
+<%= video_tag ["http://c325218.r18.stream.cf1.rackcdn.com/HDKS1.mp4"], 
+	:size => "640x368",
+	:poster => "HDKS-1.jpg",
+	:preload => "none" 
+%>
+
