--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -11,6 +11,7 @@ See the _base.scss for more
 */
 
 @import "base";
+@import "lectures";
 
 /* Page specific styles 
 */
@@ -18,9 +19,13 @@ section {
 
 	h1{	margin: 20px 0; }
 	
-	#free_videos{
+	#videos{
 		margin-top: 20px;
 		border-bottom:1px dashed #999;
+	}
+	
+	li.span3 h4{
+		margin-top: 5px;
 	}
 
 }
