--- a/app/views/main/index.html.erb
+++ b/app/views/main/index.html.erb
@@ -4,26 +4,14 @@
 
 	<ul class = "thumbnails">
 		<li class="span3">
-			<div class="thumbnail">
-				<%= image_tag("ustaz1.jpg") %>
-				<h4>Dua Kalimah Syahadat - 1</h4>
-				<p>Dua kalimah syahadat adalah penting
-					soghf;og gjgo ogifo;ghrhewr0
-					owhgorhg 
-				</p>
-				<div class="btn-group">
-					<button class="btn"><%= link_to 'Tonton', video1_path %> </button>
-				</div>
-			</div>
+			<%= link_to image_tag("ustaz1.jpg"), video1_path, :class => "thumbnail" %>
+			<h4>Dua Kalimah Syahadat - 1</h4>
+			<p>2 Januari 2012</p>
 		</li>
 		<li class="span3">
 			<div class="thumbnail">
 				<%= image_tag("ustaz2.jpg") %>
 				<h4>Dua Kalimah Syahadat - 2</h4>
-				<p>Dua kalimah syahadat adalah penting
-					soghf;og gjgo ogifo;ghrhewr0
-					owhgorhg 
-				</p>
 				<div class="btn-group">
 					<button class="btn">Tonton</button>
 				</div>
@@ -33,10 +21,6 @@
 			<div class="thumbnail">
 				<%= image_tag("ustaz2.jpg") %>
 				<h4>Dua Kalimah Syahadat - 3</h4>
-				<p>Dua kalimah syahadat adalah penting
-					soghf;og gjgo ogifo;ghrhewr0
-					owhgorhg 
-				</p>
 				<div class="btn-group">
 					<button class="btn">Tonton</button>
 				</div>
@@ -46,10 +30,6 @@
 			<div class="thumbnail">
 				<%= image_tag("ustaz1.jpg") %>
 				<h4>Dua Kalimah Syahadat - 4</h4>
-				<p>Dua kalimah syahadat adalah penting
-					soghf;og gjgo ogifo;ghrhewr0
-					owhgorhg 
-				</p>
 				<div class="btn-group">
 					<button class="btn">Tonton</button>
 				</div>
@@ -66,10 +46,6 @@
 			<div class="thumbnail">
 				<%= image_tag("ustaz1.jpg") %>
 				<h4>Dua Kalimah Syahadat - 5</h4>
-				<p>Dua kalimah syahadat adalah penting
-					soghf;og gjgo ogifo;ghrhewr0
-					owhgorhg 
-				</p>
 				<div class="btn-group">
 					<button class="btn">Langgan</button>
 				</div>
@@ -79,12 +55,8 @@
 			<div class="thumbnail">
 				<%= image_tag("ustaz2.jpg") %>
 				<h4>Dua Kalimah Syahadat - 6</h4>
-				<p>Dua kalimah syahadat adalah penting
-					soghf;og gjgo ogifo;ghrhewr0
-					owhgorhg 
-				</p>
 				<div class="btn-group">
-					<button class="btn">Tonton</button>
+					<button class="btn">Langgan</button>
 				</div>
 			</div>
 		</li>
@@ -92,12 +64,8 @@
 			<div class="thumbnail">
 				<%= image_tag("ustaz2.jpg") %>
 				<h4>Dua Kalimah Syahadat - 7</h4>
-				<p>Dua kalimah syahadat adalah penting
-					soghf;og gjgo ogifo;ghrhewr0
-					owhgorhg 
-				</p>
 				<div class="btn-group">
-					<button class="btn">Tonton</button>
+					<button class="btn">Langgan</button>
 				</div>
 			</div>
 		</li>
@@ -105,12 +73,8 @@
 			<div class="thumbnail">
 				<%= image_tag("ustaz1.jpg") %>
 				<h4>Dua Kalimah Syahadat - 8</h4>
-				<p>Dua kalimah syahadat adalah penting
-					soghf;og gjgo ogifo;ghrhewr0
-					owhgorhg 
-				</p>
 				<div class="btn-group">
-					<button class="btn">Tonton</button>
+					<button class="btn">Langgan</button>
 				</div>
 			</div>
 		</li>
