--- a/app/views/lectures/new.html.erb
+++ b/app/views/lectures/new.html.erb
@@ -1,3 +1,3 @@
 <h1>Masukkan informasi tentang ceramah</h1>
 
-<%= render :partial => 'form_for_lecture' %>
+<%= render :partial => 'lecture_form' %>
