--- a/app/assets/stylesheets/lectures.css.scss
+++ b/app/assets/stylesheets/lectures.css.scss
@@ -3,13 +3,15 @@
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
 #moderator_actions{
-
 	.upload_btn{
 		margin-top: 20px;
 	}
 
 }
 
+#lectures_thumbnails{
+	margin-top: 30px;
+}
 #lecture_form{
 	textarea#lecture_note{
 		width: 700px;
@@ -25,6 +27,10 @@
 	margin-top: 30px;
 	h1.title{
 		line-height: 5px;
+	}
+	
+	#markdown_text h1{
+		text-align: center;
 	}
 	
 	.tip{
