--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -5,10 +5,36 @@
 				Ceramah Ustaz Abd. Yasin
 			</a>
 			<ul class="nav">
-				<li class="<%= "active" if @nav == "list" %>"><%= link_to 'Video Ceramah', root_path %></li>
-				<li class="<%= "active" if @nav == "langgan"%>"><%= link_to 'Kelebihan melanggan', langgan_path %></li>
+				<li class="<%= "active" if @nav == "list" %>">
+					<%= link_to "Video Ceramah", lectures_path %></li>
+					
+				<li class="<%= "active" if @nav == "langgan"%>">
+					<%= link_to "Tentang", tentang_path %></li>
+					
 				<li><a href="http://www.abdyasin.com/category/blog">Blog Ustaz</a></li>
 			</ul>
+			
+			<ul class="nav pull-right">
+				<% if current_moderator %>
+					<li class="dropdown" id="menu1">
+						<a class="dropdown-toggle" data-toggle="dropdown" href="#menu1">
+					      <%= current_moderator.email %>
+					      <b class="caret"></b>
+					    </a>
+						<ul class="dropdown-menu">
+							  <li><%= link_to "Kemaskini profil",
+							 		edit_moderator_path(current_moderator) %></li>
+						      <li><%= link_to "Daftar moderator", signup_path %></li>
+							  <li class="divider"></li>
+						      <li><%= link_to "Keluar", signout_path %></li>
+						</ul>
+					</li>
+				<% else %>
+					<li class="<%= "active" if @nav == "moderator_masuk" %>">
+						<%= link_to "Moderator masuk", signin_path %></li>
+				<% end %>
+			</ul>
+			
 		</div>
 	</div>
 </nav>
