--- a/app/assets/stylesheets/main.css.scss
+++ b/app/assets/stylesheets/main.css.scss
@@ -2,3 +2,12 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
+#main_index{
+	.hero-unit{
+		margin-top: 4px;
+	}
+}
+
+#tentang, #donation, #feedback{
+	margin-top: 40px;
+}
