--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,11 +9,19 @@
 </head>
 <body>
 
-<%= render :partial => 'layouts/navigation' %>
+<div id="layout" class="container">
+	<%= render :partial => 'layouts/navigation' %>
+	<%= yield %>
+	<div id="layout_footer"></div>
+</div>
 
-<section class="container">
-	<%= yield %>	
-</section>
+<div id="footer">
+	<div class="container">	
+	<i class="icon-heart"></i>
+	<span>Dibina dengan teliti dan penuh kasih sayang oleh <a href="http://www.geligalabs.com/blog">
+		Geliga Labs</a>.</span>
+	</div>
+</div>
 
 
 </body>
