Added Google Analytics

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,6 +6,7 @@
   <%= javascript_include_tag "application" %>
   <%= csrf_meta_tags %>
   <%= javascript_include_tag "http://cdn.sublimevideo.net/js/aa8czafz.js" %>
+  <%= render :partial => 'layouts/google_analytics' %>
 </head>
 <body>
 
@@ -18,7 +19,7 @@
 <div id="footer">
 	<div class="container">	
 	<i class="icon-heart"></i>
-	<span>Dibina dengan teliti dan penuh kasih sayang oleh <a href="http://www.geligalabs.com/blog">
+	<span>Dibina dengan teliti melalui petunjuk Allah oleh <a href="http://www.geligalabs.com/blog">
 		Geliga Labs</a>.</span>
 	</div>
 </div>
