Added new text to static pages

--- a/app/views/main/about.html.erb
+++ b/app/views/main/about.html.erb
@@ -27,7 +27,7 @@ pelajaran ustaz. Usah kuatir setelah kesemua siri-siri pelajaran yang lepas tela
 <h2>Laman ini dan undang-undang</h2>
 <p>Laman ini dibangunkan menggunakan <em>Ruby on Rails</em> dan boleh diperolehi secara <em>
 	<%= link_to "open source", "http://www.github.com/crashhog/"%></em>.</p>
-<p>Manakala kesemua video dan ceramah-ceramah di laman ini adalah hak milik sepenuhnya Dr. Abdullah Yasin. Para jemaah dibenarkan untuk mewar-warkan laman ini atau menyebarkan link ceramah kepda para jemaah lain. Jemaah <strong>tidak dibenarkan</strong> untuk mengumpul (video atau/dan nota) dan kemudian mengedar kompilasi ceramah-ceramah tersebut di dalam apa bentuk media (CD, DVD, thumbdrive dan lain-lain). Jemaah juga dilarang mengedit video atau nota dan mengeposkan versi baru di mana-mana medium penyampaian melainkan telah mendapat kebenaran dari Dr. Abdullah Yasin.  
+<p>Manakala kesemua video dan ceramah-ceramah di laman ini adalah hak milik sepenuhnya Dr. Abdullah Yasin. Para jemaah dibenarkan untuk mewar-warkan laman ini atau menyebarkan link ceramah kepada para jemaah lain. Jemaah <strong>tidak dibenarkan</strong> untuk mengumpul (video atau/dan nota) dan kemudian mengedar kompilasi ceramah-ceramah tersebut di dalam apa bentuk media (CD, DVD, thumbdrive, online, ebook dan lain-lain) untuk mengaut keuntungan. Jemaah juga dilarang mengedit video atau nota dan mengeposkan versi baru di mana-mana medium penyampaian melainkan telah mendapat kebenaran dari Dr. Abdullah Yasin.  
 </p>
 </div>
 	
