--- a/app/views/main/donations.html.erb
+++ b/app/views/main/donations.html.erb
@@ -1,5 +1,8 @@
 <div id="donation">
-	
+
+<h2>Assalamualaikun para dermawan</h2>
+<p>Terima kasih kerana melawat lama video ceramah Ustaz Dr. Abdullah Yasin. Harap tuan-tuan dan puan-puan menyukai apa yang telah disampaikan oleh ustaz dan mengambil pengajaran daripada ceramah-ceramah tersebut. Kami memohon bantuan anda - sekiranya ada kelapangan dan keupayaan, dalam mengendalikan segala aspek digital ceramah-ceramah ustaz. Buat masa ini kerja-kerja digital koleksi ustaz bertumpukan kepada kompilasi CD, DVD, video dan laman video ini.</p>
+
 <h2>Bantuan yang diperlukan</h2>
 <p>Bantuan para jemaah diperlukan untuk meneruskan penyampaian ceramah-ceramah di laman ini. Sumbang yang dicari adalah dari segi <strong>tenaga sumber manusia</strong> dan <strong>kewangan</strong>. Dengan sumbangan jemaah aktiviti-aktivi berikut akan dilakukan bersama <%= link_to "sukarelawan", about_path %> yang sedia ada:
 	<li>Menambah moderator - Individu-individu ini bertanggungjawab meng-<em>upload</em> ceramah-ceramah baru, mencari nota dan menampal ke dalam laman dan membuat poster video (gambar thumbnail). Sekiranya perlu menjadi jurukamera. Kami ingin mengajikan individu berkenaan sekiranya tiada yang berminat untuk melakukannya secara sukarela.</li>
