--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,15 +12,18 @@
 
 <div id="layout" class="container">
 	<%= render :partial => 'layouts/navigation' %>
-	<%= yield %>
+	<div class="row">
+		<%= yield %>
+	</div>
+
 	<div id="layout_footer"></div>
 </div>
 
 <div id="footer">
 	<div class="container">	
 	<i class="icon-heart"></i>
-	<span>Dibina dengan teliti melalui petunjuk Allah oleh <a href="http://www.geligalabs.com/blog">
-		Geliga Labs</a>.</span>
+	<span>Dibina dengan teliti melalui petunjuk Allah S.W.T oleh 
+		<a href="http://www.geligalabs.com/blog"> Geliga Labs</a>.</span>
 	</div>
 </div>
 
