--- a/app/views/main/about.html.erb
+++ b/app/views/main/about.html.erb
@@ -17,6 +17,7 @@ pelajaran ustaz. Usah kuatir setelah kesemua siri-siri pelajaran yang lepas tela
 <p>Video, nota dan laman web ini telah dijayakan oleh individu-individu berikut bersama ustaz:
 	<ul>
 		<li><a href="mailto:sheikh.afifi@gmail.com">Afifi Mohd </a>- Jurukamera dan <em>post production</em>.</li>
+		<li><a href="mailto:oniee_2000@yahoo.com ">Husny Othman </a>- <em>Designer</em> untuk laman ini.</li>
 		<li><a href="mailto:mus@geligalabs.com">Muzaffar Ariff</a> - <em>Developer</em> dan 
 			moderator laman ini.</li>
 		<li><a href="mailto:alhikmah88@hotmail.com">Roslan Abd Jalil</a>- Penerbit buku di mana nota-nota untuk ceramah diperolehi.</li>
