--- a/app/views/main/feedback.html.erb
+++ b/app/views/main/feedback.html.erb
@@ -1,9 +1,28 @@
 <div id="feedback">
+
+	<h2>Menghubungi penceramah</h2>
+		<p>Dr. Abdullah Yasin dapat dihubungi melalui laman <em><%= link_to  "Facebook", "http://www.facebook.com/profile.php?id=100001888596826"%></em>-nya.</p>
+
+	<br />
+
+	<h2>Laman web dan video</h2>
+	<p>Segala maklum balas berkenaan dengan laman ini dan kualiti video ceramah boleh ditujukan kepada 
+		individu berikut secara email.</p>
+		<ul>
+			<li><a href="mailto:sheikh.afifi@gmail.com">Afifi Mohd </a>- Kualiti video</li>
+			<li><a href="mailto:mus@geligalabs.com">Muzaffar Ariff</a> - Laman web</li>
+		</ul>
+		
+	<br />
+
+	<h2>Dapatkan buku dan video dalam bentuk CD/DVD</h2>
+	<p>Sementara menunggu laman web pesanan ustaz siap, para jemaah boleh mendapatkan buku-buku atau video-video ustaz ustaz terus dari penerbit atau stokis:</p>
 	
-<h2>Individu perkenaan</h2>
-<p>Segala maklum balas boleh ditujukan kepada individu berikut secara email.</p>
-<ul>
-	<li><a href="mailto:sheikh.afifi@gmail.com">Afifi Mohd </a></li>
-	<li><a href="mailto:mus@geligalabs.com">Muzaffar Ariff</a></li>
-</ul>
+		<ul>
+			<li>Penerbit buku-buku - <a href="mailto:alhikmah88@hotmail.com">
+				Roslan Abd Jalil</a></li>
+			<li>Stokis - 
+				<a href="mailto:sheikh.afifi@gmail.com">Afifi Mohd </a></li>
+		
+		</ul>
 </div>
