--- a/app/views/main/index.html.erb
+++ b/app/views/main/index.html.erb
@@ -1,26 +1,22 @@
 <div id="main_index">
 	
-
 	<div class="hero-unit">
-		<h1>Kami perlu bantuan anda</h1>
-		<p>Sekiranya anda suka pada ceramah-ceramah Ustaz dan mahu ianya berterusan, kami 
-		   memerlukan sumbangan anda untuk mengendalikan ceramah-ceramah dan laman ini. 
-		</p>
-		<p>	<%= link_to "Ketahui caranya", donations_path, 
-					:class => "btn btn-primary btn-large" %>
+		<h1>Assalamuaikum para pengunjung</h1>
+		<p>Selamat datang ke laman rasmi video ceramah-ceramah Ustaz Dr. Abdullah Yasin. Untuk jemaah 
+			yang belum biasa dengan cara penyampaian Dr. Abdullah Yasin, setiap ceramah adalah
+			berdasarkan petikan daripada buku tulisan beliau atau nota yang ditulis khas untuk 
+			ceramah tersebut. Laman ini memuatkan kedua-duanya sekali berdasarkan. Selamat 
+			melayari.
 		</p>
 	</div>
+		
 
-	<div class="page-header">
-		<h1>Ceramah-ceramah Ustaz
-			<small>Siri video untuk jemaah Ummatan Wasata</small>
-		</h1>	
-	</div>
-
-	<div id="lectures_thumbnails">
+	<div id="lectures_thumbnails" class="span9">
 		<ul class = "thumbnails">
 			<%= render @lectures %>
 		</ul>
 	</div>
-	
+
+	<%= render :partial => 'layouts/sidebar_promo' %>
+		
 </div>
