Changed static text and hows many video on the index page

--- a/app/views/layouts/_sidebar_promo.html.erb
+++ b/app/views/layouts/_sidebar_promo.html.erb
@@ -8,9 +8,8 @@
 	
 	<div class="promo_contribute">
 		<h1>Cara-cara lain anda boleh membantu</h1>
-		<p>Kami juga memerlukan pertolongan anda dari segi tenaga, masa dan kepakaran.
-			Individu yang kami cari adalah dari golongan 
-			<%= link_to "Ummatan Wasata", "http://www.abdyasin.com/tentang-laman-ummatan-wasata/maksud-ummatan-wasata/" %>.</p>
+		<p>Kami juga memerlukan pertolongan anda dari segi tenaga, masa dan kepakaran dalam 
+			menguruskan laman ini.</p>
 		<%= link_to "Berminat untuk membantu", moderator_path, 
 					:class => "btn btn-primary" %></p>
 	</div>
