--- a/app/views/main/donations.html.erb
+++ b/app/views/main/donations.html.erb
@@ -4,16 +4,16 @@
 <p>Terima kasih kerana melawat lama video ceramah Ustaz Dr. Abdullah Yasin. Harap tuan-tuan dan puan-puan menyukai apa yang telah disampaikan oleh ustaz dan mengambil pengajaran daripada ceramah-ceramah tersebut. Kami memohon bantuan anda - sekiranya ada kelapangan dan keupayaan, dalam mengendalikan segala aspek digital ceramah-ceramah ustaz. Buat masa ini kerja-kerja digital koleksi ustaz bertumpukan kepada kompilasi CD, DVD, video dan laman video ini.</p>
 
 <h2>Bantuan yang diperlukan</h2>
-<p>Bantuan para jemaah diperlukan untuk meneruskan penyampaian ceramah-ceramah di laman ini. Sumbang yang dicari adalah dari segi <strong>tenaga sumber manusia</strong> dan <strong>kewangan</strong>. Dengan sumbangan jemaah aktiviti-aktivi berikut akan dilakukan bersama <%= link_to "sukarelawan", about_path %> yang sedia ada:
-	<li>Menambah moderator - Individu-individu ini bertanggungjawab meng-<em>upload</em> ceramah-ceramah baru, mencari nota dan menampal ke dalam laman dan membuat poster video (gambar thumbnail). Sekiranya perlu menjadi jurukamera. Kami ingin mengajikan individu berkenaan sekiranya tiada yang berminat untuk melakukannya secara sukarela.</li>
-	<li>Menambah <em>storage</em> - Membeli <em>storage</em> untuk menampung saiz video yang asal dan untuk laman ini.</li>  
-	<li>Menambah peralatan rakaman - Rakaman dapat dibuat sekiranya peralatan asal tidak berfungsi. Buat masa ini rakaman dilakukan dengan satu unit rakaman sahaja.</li>
-	<li>Komputer lebih pantas - Ini untuk melakukan kerja-kerja <em>post production</em> dan membangunkan laman ini. </li>
-	<li>Membayar <em>hosting service</em> - Laman ini menggunakan technologi <em>cloud</em> sepenuhnya untuk mengurangkan kos operasi. Namun begitu perkhidmatan tersebut perlu dibayar setiap bulan bergantung kepada kadar <em>bandwidth</em> video.</li>
-	<li>Mencari pakar <em>Rails</em> - Individu terbabit bertanggungjawab memasukan ciri-ciri baru ke dalam laman ini - seperti <em>comments</em>, link ke laman sosial, pembelian <em>online</em> dan lain-lain lagi.</li>
-</p>
-
+<p>Bantuan para jemaah diperlukan untuk meneruskan penyampaian ceramah-ceramah di laman ini. Sumbang yang dicari adalah dari segi <strong>tenaga sumber manusia</strong> dan <strong>kewangan</strong>. Dengan sumbangan jemaah aktiviti-aktivi berikut akan dilakukan bersama <%= link_to "sukarelawan", about_path %> yang sedia ada:</p>
+<ul>
+		<li>Menambah moderator - Individu-individu ini bertanggungjawab meng-<em>upload</em> ceramah-ceramah baru, mencari nota dan menampal ke dalam laman dan membuat poster video (gambar thumbnail). Sekiranya perlu menjadi jurukamera. Kami ingin mengajikan individu berkenaan sekiranya tiada yang berminat untuk melakukannya secara sukarela.</li>
+		<li>Menambah <em>storage</em> - Membeli <em>storage</em> untuk menampung saiz video yang asal dan untuk laman ini.</li>  
+		<li>Menambah peralatan rakaman - Rakaman dapat dibuat sekiranya peralatan asal tidak berfungsi. Buat masa ini rakaman dilakukan dengan satu unit rakaman sahaja.</li>
+		<li>Komputer lebih pantas - Ini untuk melakukan kerja-kerja <em>post production</em> dan membangunkan laman ini. </li>
+		<li>Membayar <em>hosting service</em> - Laman ini menggunakan technologi <em>cloud</em> sepenuhnya untuk mengurangkan kos operasi. Namun begitu perkhidmatan tersebut perlu dibayar setiap bulan bergantung kepada kadar <em>bandwidth</em> video.</li>
+		<li>Mencari pakar <em>Rails</em> - Individu terbabit bertanggungjawab memasukan ciri-ciri baru ke dalam laman ini - seperti <em>comments</em>, link ke laman sosial, pembelian <em>online</em> dan lain-lain lagi.</li>
+</ul>
 <h2>Cara menyumbang</h2>
 <p>Sekiranya anda ingin menjadi sukarelawan, anda boleh berhubung dengan <a href="mailto:sheikh.afifi@gmail.com">Afifi Mohd</a> atau <a href="mailto:mus@geligalabs.com">Muzaffar Ariff</a></p>
-<p>Untuk menyumbang dari segi kewangan anda boleh lakukan secara online melalui <a href="http://www.paypal.com">paypal</a>. Atau secara perbankan online sila hubungi salah satu individu  di atas. Sumbangan anda berapa sedikit amat kami hargai.</p>
+<p>Untuk menyumbang dari segi kewangan sila hubungi salah satu individu  di atas. Sumbangan anda seberapa jumlahnya amat kami hargai.</p>
 </div>
