--- a/app/views/main/index.html.erb
+++ b/app/views/main/index.html.erb
@@ -2,11 +2,11 @@
 	
 	<div class="hero-unit">
 		<h1>Assalamuaikum para pengunjung</h1>
-		<p>Selamat datang ke laman rasmi video ceramah-ceramah Ustaz Dr. Abdullah Yasin. Untuk jemaah 
-			yang belum biasa dengan cara penyampaian Dr. Abdullah Yasin, setiap ceramah adalah
-			berdasarkan petikan daripada buku tulisan beliau atau nota yang ditulis khas untuk 
-			ceramah tersebut. Laman ini memuatkan kedua-duanya sekali berdasarkan. Selamat 
-			melayari.
+		<p>Selamat datang ke laman rasmi video ceramah-ceramah Ustaz Dr. Abdullah Yasin. Untuk 
+			pengunjung yang belum biasa dengan cara penyampaian Dr. Abdullah Yasin, setiap ceramah
+			adalah berdasarkan petikan daripada buku tulisan beliau atau nota yang ditulis khas untuk 
+			ceramah tersebut. Laman ini memuatkan kedua-duanya sekali untuk kesenangan pengunjung. 
+			Selamat melayari laman ini. 
 		</p>
 	</div>
 		
