--- a/app/views/main/index.html.erb
+++ b/app/views/main/index.html.erb
@@ -1,7 +1,7 @@
 <div id="main_index">
 	
 	<div class="hero-unit">
-		<h1>Assalamuaikum para pengunjung</h1>
+		<h1>Assalamualaikum para pengunjung</h1>
 		<p>Selamat datang ke laman rasmi video ceramah-ceramah Ustaz Dr. Abdullah Yasin. Untuk 
 			pengunjung yang belum biasa dengan cara penyampaian Dr. Abdullah Yasin, setiap ceramah
 			adalah berdasarkan petikan daripada buku tulisan beliau atau nota yang ditulis khas untuk 
