Ready for github upload

--- a/app/views/lectures/show.html.erb
+++ b/app/views/lectures/show.html.erb
@@ -13,9 +13,9 @@
 		<div class="alert alert-block tip">
 			<a class="close" data-dismiss="alert">×</a>
 		  	<h4 class="alert-heading">Sudah klik butang play, tapi video masih belum bermain?</h4> 
-			Secara 'default' video akan dimainkan dalam HTML5 player. Namun sekiranya terlalu lama menunggu, 
-			klik-kanan pada video di atas untuk tukar ke Flash Player. Opsyen ini hanya boleh dilakukan di atas komputer 
-			dan komputer riba sahaja. 
+			Secara <em>default</em> video akan dimainkan dalam HTML5 player. Namun sekiranya terlalu 
+			lama menunggu, klik-kanan pada video di atas untuk tukar ke Flash Player. Opsyen ini 
+			hanya boleh dilakukan di atas komputer dan komputer riba sahaja. 
 		</div>	
 	
 		<div class="clearfix"></div>
