Typo error on feedback page

--- a/app/views/main/feedback.html.erb
+++ b/app/views/main/feedback.html.erb
@@ -16,10 +16,10 @@
 	<br />
 
 	<h2>Dapatkan buku dan video dalam bentuk CD/DVD</h2>
-	<p>Sementara menunggu laman web pesanan ustaz siap, para jemaah boleh mendapatkan buku-buku atau video-video ustaz ustaz terus dari penerbit atau stokis:</p>
+	<p>Sementara menunggu laman web pesanan ustaz siap, para jemaah boleh mendapatkan buku-buku atau video-video ustaz terus dari penerbit atau stokis:</p>
 	
 		<ul>
-			<li>Penerbit buku-buku - <a href="mailto:alhikmah88@hotmail.com">
+			<li>Penerbit - <a href="mailto:alhikmah88@hotmail.com">
 				Roslan Abd Jalil</a></li>
 			<li>Stokis - 
 				<a href="mailto:sheikh.afifi@gmail.com">Afifi Mohd </a></li>
