Change the text in the donation page

--- a/app/views/main/donations.html.erb
+++ b/app/views/main/donations.html.erb
@@ -1,7 +1,7 @@
 <div id="donation">
 
 <h2>Assalamualaikun para dermawan</h2>
-<p>Terima kasih kerana melawat lama video ceramah Ustaz Dr. Abdullah Yasin. Harap tuan-tuan dan puan-puan menyukai apa yang telah disampaikan oleh ustaz dan mengambil pengajaran daripada ceramah-ceramah tersebut. Kami memohon bantuan anda - sekiranya ada kelapangan dan keupayaan, dalam mengendalikan segala aspek digital ceramah-ceramah ustaz. Buat masa ini kerja-kerja digital koleksi ustaz bertumpukan kepada kompilasi CD, DVD, video dan laman video ini.</p>
+<p>Terima kasih kerana melawat lama video ceramah Ustaz Dr. Abdullah Yasin. Harap tuan-tuan dan puan-puan menyukai apa yang telah disampaikan oleh ustaz dan mengambil pengajaran daripada ceramah-ceramah tersebut. Kami memohon bantuan anda sekiranya ada sumber kewangan yang berlebihan dan berhajat untuk disedekahkan ke jalan Allah. Buat masa ini koleksi ceramah ustaz boleh didapati secara digital menerusi kompilasi CD, DVD, video dan laman video ini. Laman web ini bertujuan untuk meningkatkan lagi penyampaian ceramah-ceramah ustaz ke seluruh dunia. </p>
 
 <h2>Bantuan yang diperlukan</h2>
 <p>Bantuan para jemaah diperlukan untuk meneruskan penyampaian ceramah-ceramah di laman ini. Sumbang yang dicari adalah dari segi <strong>tenaga sumber manusia</strong> dan <strong>kewangan</strong>. Dengan sumbangan jemaah aktiviti-aktivi berikut akan dilakukan bersama <%= link_to "sukarelawan", about_path %> yang sedia ada:</p>
@@ -14,6 +14,5 @@
 		<li>Mencari pakar <em>Rails</em> - Individu terbabit bertanggungjawab memasukan ciri-ciri baru ke dalam laman ini - seperti <em>comments</em>, link ke laman sosial, pembelian <em>online</em> dan lain-lain lagi.</li>
 </ul>
 <h2>Cara menyumbang</h2>
-<p>Sekiranya anda ingin menjadi sukarelawan, anda boleh berhubung dengan <a href="mailto:sheikh.afifi@gmail.com">Afifi Mohd</a> atau <a href="mailto:mus@geligalabs.com">Muzaffar Ariff</a></p>
-<p>Untuk menyumbang dari segi kewangan sila hubungi salah satu individu  di atas. Sumbangan anda seberapa jumlahnya amat kami hargai.</p>
+<p>Sekiranya anda ingin menyumbang dari segi kewangan sila berhubung dengan <a href="mailto:sheikh.afifi@gmail.com">Afifi Mohd</a> atau <a href="mailto:mus@geligalabs.com">Muzaffar Ariff</a>. Sumbangan anda seberapa banyak jumlahnya amat kami hargai. </p>
 </div>
