--- a/app/assets/stylesheets/main.css.scss.erb
+++ b/app/assets/stylesheets/main.css.scss.erb
@@ -20,6 +20,10 @@
 	.span9{
 		margin-left: 0;
 	}
+	
+	#lectures_thumbnails{
+		margin-top:0;
+	}
 }
 
 #tentang, #donation, #feedback, #moderator{
