--- a/app/views/layouts/_sidebar_promo.html.erb
+++ b/app/views/layouts/_sidebar_promo.html.erb
@@ -13,4 +13,7 @@
 		<%= link_to "Berminat untuk membantu", moderator_path, 
 					:class => "btn btn-primary" %></p>
 	</div>
+	<div class="facebook_like">
+		
+	</div>
 </div>
