--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,6 +10,8 @@
 </head>
 <body>
 
+<%= render :partial => 'layouts/facebook_api' %>
+
 <div id="layout" class="container">
 	<%= render :partial => 'layouts/navigation' %>
 	<div class="row">
