--- a/app/views/lectures/show.html.erb
+++ b/app/views/lectures/show.html.erb
@@ -19,6 +19,8 @@
 		</div>	
 	
 		<div class="clearfix"></div>
+		
+		<div class="fb-like" data-href="http://video.abdyasin.com" data-send="true" data-width="700" data-show-faces="false" data-font="verdana"></div>
 		<div class="note">	
 			<h1 class="title"><%= @lecture.title %></h1>
 
