--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -28,10 +28,15 @@ See the _base.scss for more
 	li.span3 h4{
 		margin-top: 5px;
 	}
+	
+	.row{
+		margin-left: 0;
+	}
 }
 
 #sidebar_promo{
-	width: 240px;	
+	width: 228px;
+	margin-left: 12px;	
 	
 	.promo_donation{
 		padding: 13px;
