Change the main index page text

--- a/app/views/main/index.html.erb
+++ b/app/views/main/index.html.erb
@@ -5,8 +5,7 @@
 		<p>Selamat datang ke laman rasmi video ceramah-ceramah Ustaz Dr. Abdullah Yasin. Untuk 
 			pengunjung yang belum biasa dengan cara penyampaian Dr. Abdullah Yasin, setiap ceramah
 			adalah berdasarkan petikan daripada buku tulisan beliau atau nota yang ditulis khas untuk 
-			ceramah tersebut. Laman ini memuatkan kedua-duanya sekali untuk kesenangan pengunjung. 
-			Selamat melayari laman ini. 
+			ceramah tersebut. Laman ini memuatkan kedua-duanya sekali (video dan nota) untuk kesenangan pengunjung. Selamat melayari laman ini. 
 		</p>
 	</div>
 
