--- a/app/views/lectures/show.html.erb
+++ b/app/views/lectures/show.html.erb
@@ -24,7 +24,15 @@
 		<div class="note">	
 			<h1 class="title"><%= @lecture.title %></h1>
 
-			<p>Ceramah dirakam pada <%= @lecture.recorded_at.strftime('%d hb %b %Y') %></p>
+			<p>Ceramah dirakam pada <%= @lecture.recorded_at.strftime('%d hb %b %Y') %> dan 
+			
+			<% if @lecture.minutes > 60  %>
+				tempoh ceramah adalah <%= @lecture.minutes.to_i/60 %> jam 
+				<%= @lecture.minutes.to_i - 60 %> minit
+			<% else  %>
+				tempoh ceramah adalah <%= @lecture.minutes.to_i %> minit
+			<% end %>
+			</p>
 			<br/>
 		
 			<div id="markdown_text">
