--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,7 +5,7 @@
   <%= stylesheet_link_tag "application", :media => "all" %>
   <%= javascript_include_tag "application" %>
   <%= csrf_meta_tags %>
-  <%= javascript_include_tag "http://cdn.sublimevideo.net/js/aa8czafz.js" %>
+  <%= javascript_include_tag "http://cdn.sublimevideo.net/js/[Your sublime API key].js" %>
   <%= render :partial => 'layouts/google_analytics' %>
 </head>
 <body>
